@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix mocked objects so that they respond properly to ->can when using AUTOLOAD.
+
 0.000060  2016-09-25 12:38:43-07:00 America/Los_Angeles
 
     - Fix some docs
